--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -19,7 +19,7 @@
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="">Recipe</a></li>
+                <li><a href="{{ url_for('recipe') }}">Recipe</a></li>
                 <li><a href="">Ingrediant</a></li>
               </ul>
             </div>
@@ -28,7 +28,7 @@
           <!-- mobile sidenav -->
           <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="">Recipe</a></li>
+            <li><a href="{{ url_for('recipe') }}">Recipe</a></li>
             <li><a href="">Ingrediant</a></li>
           </ul>
     </header>
