--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Recipe</h3>
+<h3 class="light-blue-text text-darken-4 center-align">Recipes</h3>
 
 <div class="row">
     <div class="col s12 center-align">
@@ -10,5 +10,32 @@
         </a>
     </div>
 </div>
+
+<ul class="collapsible">
+    {% for recipe in recipes %}
+    <li>
+        <div class="collapsible-header white-text light-blue darken-4">
+            <i class="fas fa-caret-down"></i>
+            <strong>{{ recipe.recipe_name }}</strong>
+        </div>
+        <div class="collapsible-body">
+            <strong>Category:</strong> {{ recipe.category.category_name }}<br>
+            <strong>Servings:</strong> {{ recipe.servings }}<br>
+            <strong>Prep Time:</strong> {{ recipe.prep_time }} minutes<br>
+            <strong>Cook Time:</strong> {{ recipe.cook_time }} minutes<br>
+            <strong>Total Time:</strong> {{ recipe.total_time }} minutes<br>
+            <p>{{ recipe.description }}</p>
+            <div class="row">
+                <div class="col s6">
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn light-blue darken-2">Edit</a>
+                </div>
+                <div class="col s6">
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn red">Delete</a>
+                </div>
+            </div>
+        </div>
+    </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
