--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -25,14 +25,10 @@
             <strong>Cook Time:</strong> {{ recipe.cook_time }} minutes<br>
             <strong>Total Time:</strong> {{ recipe.total_time }} minutes<br>
             <p>{{ recipe.description }}</p>
-            <div class="row">
-                <div class="col s6">
-                    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn light-blue darken-2">Edit</a>
-                </div>
-                <div class="col s6">
-                    <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn red">Delete</a>
-                </div>
-            </div>
+            <p>
+                <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green accent-4">Edit</a>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn red">Delete</a>
+            </p>
         </div>
     </li>
     {% endfor %}
