--- a/cookbook/templates/edit_recipe.html
+++ b/cookbook/templates/edit_recipe.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                <input id="recipe_name" name="recipe_name" minlength="3" maxlength="25" type="text" class="validate" required>
+                <input id="recipe_name" name="recipe_name" value="{{ recipe.recipe_name }}" minlength="3" maxlength="25" type="text" class="validate" required>
                 <label for="recipe_name">Recipe Name</label>
             </div>
         </div>
@@ -18,8 +18,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <textarea id="description" name="description" minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required>
-                </textarea>
+                <textarea id="description" name="description"  minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required>{{ recipe.description }}</textarea>
                 <label for="description">Description</label>
             </div>
         </div>
@@ -28,8 +27,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <textarea id="instructions" name="instructions" minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required>
-                </textarea>
+                <textarea id="instructions" name="instructions" minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required>{{ recipe.instructions }}</textarea>
                 <label for="instructions">Instructions</label>
             </div>
         </div>
@@ -38,7 +36,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-utensils prefix light-blue-text text-darken-4"></i>
-                <input id="servings" name="servings" type="number" class="validate" required>
+                <input id="servings" name="servings" value="{{ recipe.servings }}" type="number" class="validate" required>
                 <label for="servings">Servings</label>
             </div>
         </div>
@@ -47,7 +45,7 @@
         <div class="row">
             <div class="input-field col s6">
                 <i class="fas fa-stopwatch prefix light-blue-text text-darken-4"></i>
-                <input id="prep_time" name="prep_time" type="number" class="validate" required>
+                <input id="prep_time" name="prep_time" value="{{ recipe.prep_time }}" type="number" class="validate" required>
                 <label for="prep_time">Prep Time (minutes)</label>
             </div>
         </div>
@@ -56,7 +54,7 @@
         <div class="row">
             <div class="input-field col s6">
                 <i class="fas fa-stopwatch prefix light-blue-text text-darken-4"></i>
-                <input id="cook_time" name="cook_time" type="number" class="validate" required>
+                <input id="cook_time" name="cook_time" value="{{ recipe.cook_time }}" type="number" class="validate" required>
                 <label for="cook_time">Cook Time (minutes)</label>
             </div>
         </div>
@@ -65,7 +63,7 @@
         <div class="row">
             <div class="input-field col s6">
                 <i class="fas fa-stopwatch prefix light-blue-text text-darken-4"></i>
-                <input id="total_time" name="total_time" type="number" class="validate" required>
+                <input id="total_time" name="total_time" value="{{ recipe.total_time }}" type="number" class="validate" required>
                 <label for="total_time">Total Time (minutes)</label>
             </div>
         </div>
@@ -75,14 +73,19 @@
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
                 <select id="category_id" name="category_id" class="validate" required>
-                    <option value="" disabled selected>Choose Category</option>
+                    <option value="" disabled>Choose Category</option>
                     {% for category in categories %}
-                        <option value="{{ category.id }}">{{ category.category_name }}</option>
+                        {% if category.id == recipe.category_id %}
+                            <option value="{{ category.id }}" selected>{{ category.category_name }}</option>
+                        {% else %}
+                            <option value="{{ category.id }}">{{ category.category_name }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
                 <label for="category_id">Category</label>
             </div>
         </div>
+
 
 
         <!-- submit button -->
