--- a/cookbook/templates/edit_recipe.html
+++ b/cookbook/templates/edit_recipe.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                <input id="recipe_name" name="recipe_name" value="{{ recipe.recipe_name }}" minlength="3" maxlength="25" type="text" class="validate" required>
+                <input id="recipe_name" name="recipe_name" value="{{ recipe.recipe_name }}" minlength="3" maxlength="50" type="text" class="validate" required>
                 <label for="recipe_name">Recipe Name</label>
             </div>
         </div>
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <textarea id="description" name="description"  minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required>{{ recipe.description }}</textarea>
+                <textarea id="description" name="description"  minlength="5" maxlength="500" type="text" class="materialize-textarea validate" required>{{- recipe.description -}}</textarea>
                 <label for="description">Description</label>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <textarea id="instructions" name="instructions" minlength="5" maxlength="200" type="text" class="materialize-textarea validate" required>{{ recipe.instructions }}</textarea>
+                <textarea id="instructions" name="instructions" minlength="5" maxlength="500" type="text" class="materialize-textarea validate" required>{{- recipe.instructions -}}</textarea>
                 <label for="instructions">Instructions</label>
             </div>
         </div>
