--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -25,6 +25,7 @@
             <strong>Cook Time:</strong> {{ recipe.cook_time }} minutes<br>
             <strong>Total Time:</strong> {{ recipe.total_time }} minutes<br>
             <p>{{ recipe.description }}</p>
+            <p>{{ recipe.instructions }}</p>
             <p>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green accent-4">Edit</a>
                 <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn red">Delete</a>
