--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -3,6 +3,18 @@
 
 <h3 class="light-blue-text text-darken-4 center-align">Recipes</h3>
 
+<!-- Modal Structure -->
+<div id="deleteModal" class="modal">
+    <div class="modal-content">
+        <h4>Warning!</h4>
+        <p>Are you sure you want to delete this recipe?</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+        <a id="deleteButton" href="#" class="waves-effect waves-red btn-flat">Delete</a>
+    </div>
+</div>
+
 <div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_recipe') }}" class="btn-large light-blue darken-2">
@@ -28,7 +40,7 @@
             <p>{{ recipe.instructions }}</p>
             <p>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green accent-4">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn red">Delete</a>
+                <a href="#" class="btn red delete-btn" data-recipe-id="{{ recipe.id }}">Delete</a>
             </p>
         </div>
     </li>
