script and html updated to allow recipe and category deletion includes modal warning

--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -11,7 +11,7 @@
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
-        <a id="deleteButton" href="#" class="waves-effect waves-red btn-flat">Delete</a>
+        <a id="deleteRecipeButton" href="#" class="waves-effect waves-red btn-flat">Delete</a>
     </div>
 </div>
 
