--- a/cookbook/templates/categories.html
+++ b/cookbook/templates/categories.html
@@ -3,6 +3,18 @@
 
 <h3 class="light-blue-text text-darken-4 center-align">Categories</h3>
 
+<!-- Modal Structure -->
+<div id="deleteModal" class="modal">
+    <div class="modal-content">
+        <h4>Warning!</h4>
+        <p>Are you sure you want to delete this category?</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+        <a id="deleteCategoryButton" href="#" class="waves-effect waves-red btn-flat">Delete</a>
+    </div>
+</div>
+
 <div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2">
@@ -20,7 +32,7 @@
             </div>
             <div class="card-action">
                 <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
-                <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
+                <a href="#" class="btn red delete-category-btn" data-category-id="{{ category.id }}">Delete</a>
             </div>
         </div>
     </div>
