--- a/cookbook/templates/add_recipe.html
+++ b/cookbook/templates/add_recipe.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Add Recipe</h3>
+<h3 class="green-text text-darken-5 center-align">Add Recipe</h3>
 
-<div class="row card-panel grey lighten-5">
+<div class="row card-panel light-green lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
         <!-- recipe name -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-pencil-alt prefix light-green-text text-darken-4"></i>
                 <input id="recipe_name" name="recipe_name" minlength="3" maxlength="50" type="text" class="validate" required>
                 <label for="recipe_name">Recipe Name</label>
             </div>
@@ -17,7 +17,7 @@
         <!-- description -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-align-left prefix light-green-text text-darken-4"></i>
                 <textarea id="description" name="description" minlength="5" maxlength="500" type="text" class="materialize-textarea validate" required>
                 </textarea>
                 <label for="description">Description</label>
@@ -27,7 +27,7 @@
         <!-- instructions -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-align-left prefix light-green-text text-darken-4"></i>
                 <textarea id="instructions" name="instructions" minlength="5" maxlength="500" type="text" class="materialize-textarea validate" required>
                 </textarea>
                 <label for="instructions">Instructions</label>
@@ -37,7 +37,7 @@
         <!-- servings -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-utensils prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-utensils prefix light-green-text text-darken-4"></i>
                 <input id="servings" name="servings" type="number" class="validate" required>
                 <label for="servings">Servings</label>
             </div>
@@ -46,7 +46,7 @@
         <!-- prep time -->
         <div class="row">
             <div class="input-field col s6">
-                <i class="fas fa-stopwatch prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-stopwatch prefix light-green-text text-darken-4"></i>
                 <input id="prep_time" name="prep_time" type="number" class="validate" required>
                 <label for="prep_time">Prep Time (minutes)</label>
             </div>
@@ -55,7 +55,7 @@
         <!-- cook time -->
         <div class="row">
             <div class="input-field col s6">
-                <i class="fas fa-stopwatch prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-stopwatch prefix light-green-text text-darken-4"></i>
                 <input id="cook_time" name="cook_time" type="number" class="validate" required>
                 <label for="cook_time">Cook Time (minutes)</label>
             </div>
@@ -64,7 +64,7 @@
         <!-- total time -->
         <div class="row">
             <div class="input-field col s6">
-                <i class="fas fa-stopwatch prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-stopwatch prefix light-green-text text-darken-4"></i>
                 <input id="total_time" name="total_time" type="number" class="validate" required>
                 <label for="total_time">Total Time (minutes)</label>
             </div>
@@ -73,7 +73,7 @@
         <!-- category id -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-folder-open prefix light-green-text text-darken-4"></i>
                 <select id="category_id" name="category_id" class="validate" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for category in categories %}
