--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -22,7 +22,7 @@
 
   <header>
       <!-- top navbar -->
-      <nav class="light-blue darken-1">
+      <nav class="light-green darken-3">
           <div class="nav-wrapper">
           <a href="{{ url_for('home') }}" class="brand-logo">Cookbook</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
@@ -47,7 +47,7 @@
       {% endblock %}
   </main>
 
-  <footer class="page-footer blue darken-3">
+  <footer class="page-footer light-green darken-3">
       <div class="footer-copyright">
           <div class="container">
               For educational purposes only
