--- a/cookbook/templates/categories.html
+++ b/cookbook/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Categories</h3>
+<h3 class="green-text text-darken-5 center-align">Categories</h3>
 
 <!-- Modal Structure -->
 <div id="deleteModal" class="modal">
@@ -17,7 +17,7 @@
 
 <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2">
+        <a href="{{ url_for('add_category') }}" class="btn-large light-green darken-2">
             Add Category <i class="fas fa-plus-square right"></i>
         </a>
     </div>
@@ -26,7 +26,7 @@
 <div class="row">
     {% for category in categories %}
     <div class="col s12 m6 l3">
-        <div class="card light-blue darken-4 center-align">
+        <div class="card light-green darken-2 center-align">
             <div class="card-content white-text">
                 <span class="card-title">{{ category.category_name }}</span>
             </div>
