--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Recipes</h3>
+<h3 class="green-text text-darken-5 center-align">Recipes</h3>
 
 <!-- Modal Structure -->
 <div id="deleteModal" class="modal">
@@ -17,7 +17,7 @@
 
 <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_recipe') }}" class="btn-large light-blue darken-2">
+        <a href="{{ url_for('add_recipe') }}" class="btn-large light-green darken-3">
             Add Recipe <i class="fas fa-plus-square right"></i>
         </a>
     </div>
@@ -26,7 +26,7 @@
 <ul class="collapsible">
     {% for recipe in recipes %}
     <li>
-        <div class="collapsible-header white-text light-blue darken-4">
+        <div class="collapsible-header white-text light-green darken-3 z-depth-3">
             <i class="fas fa-caret-down"></i>
             <strong>{{ recipe.recipe_name }}</strong>
         </div>
