--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -36,7 +36,7 @@
             <strong>Prep Time:</strong> {{ recipe.prep_time }} minutes<br>
             <strong>Cook Time:</strong> {{ recipe.cook_time }} minutes<br>
             <strong>Total Time:</strong> {{ recipe.total_time }} minutes<br>
-            <p>{{ recipe.description }}</p>
+            <p><em>{{ recipe.description }}</em></p>
             <p>{{ recipe.instructions }}</p>
             <p>
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green accent-4">Edit</a>
