--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -23,6 +23,15 @@
 
 <body>
 
+  <style>
+    body {
+        background-image: url("{{ url_for('static', filename='images/todd-quackenbush-x5SRhkFajrA-unsplash-greyscale.jpg') }}");
+        background-size: cover;
+        background-position: center;
+        z-index: 0;
+    }
+  </style>
+
   <header>
       <!-- top navbar -->
       <nav class="light-green darken-3">
