--- a/cookbook/templates/filtered_recipes.html
+++ b/cookbook/templates/filtered_recipes.html
@@ -11,7 +11,7 @@
                 <i class="fas fa-caret-down"></i>
                 <strong>{{ recipe.recipe_name }}</strong>
             </div>
-            <div class="collapsible-body">
+            <div class="collapsible-body white-text">
                 <strong>Category:</strong> {{ recipe.category.category_name }}<br>
                 <strong>Servings:</strong> {{ recipe.servings }}<br>
                 <strong>Prep Time:</strong> {{ recipe.prep_time }} minutes<br>
