--- a/cookbook/templates/recipe.html
+++ b/cookbook/templates/recipe.html
@@ -6,7 +6,7 @@
 <!-- Search Bar -->
 <form action="{{ url_for('filter_recipes') }}" method="GET">
     <div class="input-field">
-        <input id="search" type="search" name="query" placeholder="Filter recipes...">
+        <input id="search" type="search" name="query" placeholder="Search recipes...">
         <label class="label-icon" for="search"><i class="material-icons"></i></label>
         <i class="material-icons">close</i>
     </div>
@@ -39,7 +39,7 @@
             <i class="fas fa-caret-down"></i>
             <strong>{{ recipe.recipe_name }}</strong>
         </div>
-        <div class="collapsible-body">
+        <div class="collapsible-body white-text">
             <strong>Category:</strong> {{ recipe.category.category_name }}<br>
             <strong>Servings:</strong> {{ recipe.servings }}<br>
             <strong>Prep Time:</strong> {{ recipe.prep_time }} minutes<br>
