--- a/cookbook/templates/add_category.html
+++ b/cookbook/templates/add_category.html
@@ -8,7 +8,7 @@
         <!-- category name -->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-folder-open prefix light-green-text text-darken-4"></i>
                 <input id="category_name" name="category_name" minlength="3" maxlength="25" type="text" class="validate" required>
                 <label for="category_name">Category Name</label>
             </div>
@@ -16,7 +16,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-blue darken-1">
+                <button type="submit" class="btn-large light-green darken-1">
                     Add Category <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
