--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Project Cookbook - First time educational Flask project allowing users to store recipes">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -28,7 +29,6 @@
         background-image: url("{{ url_for('static', filename='images/todd-quackenbush-x5SRhkFajrA-unsplash-greyscale.jpg') }}");
         background-size: cover;
         background-position: center;
-        z-index: 0;
     }
   </style>
 
