search error html updated to allow redirecting to home

--- a/cookbook/templates/filtered_recipes.html
+++ b/cookbook/templates/filtered_recipes.html
@@ -28,7 +28,7 @@
         {% endfor %}
     </ul>
 {% else %}
-    <p>No recipes found.</p>
+    <p class="white-text">No recipes found.</p>
 {% endif %}
 
 {% endblock %}
