--- a/cookbook/templates/add_recipe.html
+++ b/cookbook/templates/add_recipe.html
@@ -88,7 +88,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-green darken-1">
+                <button type="submit" class="btn-large light-green darken-1 hoverable">
                     Add Recipe <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
