--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -35,7 +35,7 @@
       <!-- top navbar -->
       <nav class="light-green darken-3">
           <div class="nav-wrapper">
-          <a href="{{ url_for('home') }}" class="brand-logo">Cookbook</a>
+          <a href="{{ url_for('home') }}" class="brand-logo">Cookbook <i class="fas fa-book-open"></i></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
           <ul class="right hide-on-med-and-down">
               <li><a href="{{ url_for('home') }}">Home</a></li>
@@ -58,13 +58,7 @@
       {% endblock %}
   </main>
 
-  <footer class="page-footer light-green darken-3">
-      <div class="footer-copyright">
-          <div class="container">
-              For educational purposes only
-          </div>
-      </div>
-  </footer>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
