--- a/cookbook/templates/categories.html
+++ b/cookbook/templates/categories.html
@@ -17,7 +17,7 @@
 
 <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_category') }}" class="btn-large light-green darken-2">
+        <a href="{{ url_for('add_category') }}" class="btn-large light-green darken-2 hoverable">
             Add Category <i class="fas fa-plus-square right"></i>
         </a>
     </div>
@@ -31,8 +31,8 @@
                 <span class="card-title">{{ category.category_name }}</span>
             </div>
             <div class="card-action">
-                <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
-                <a href="#" class="btn red delete-category-btn" data-category-id="{{ category.id }}">Delete</a>
+                <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4 hoverable">Edit</a>
+                <a href="#" class="btn red delete-category-btn hoverable" data-category-id="{{ category.id }}">Delete</a>
             </div>
         </div>
     </div>
