--- a/cookbook/templates/edit_category.html
+++ b/cookbook/templates/edit_category.html
@@ -16,7 +16,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-blue darken-1">
+                <button type="submit" class="btn-large light-blue darken-1 hoverable">
                     Edit Category <i class="fas fa-edit right"></i>
                 </button>
             </div>
