--- a/cookbook/templates/edit_recipe.html
+++ b/cookbook/templates/edit_recipe.html
@@ -91,7 +91,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large light-blue darken-1">
+                <button type="submit" class="btn-large light-blue darken-1 hoverable">
                     Edit Recipe <i class="fas fa-edit right"></i>
                 </button>
             </div>
