--- a/cookbook/templates/filtered_recipes.html
+++ b/cookbook/templates/filtered_recipes.html
@@ -20,8 +20,8 @@
                 <p><em>{{ recipe.description }}</em></p>
                 <p>{{ recipe.instructions }}</p>
                 <p>
-                    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green accent-4">Edit</a>
-                    <a href="#" class="btn red delete-btn" data-recipe-id="{{ recipe.id }}">Delete</a>
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green accent-4 hoverable">Edit</a>
+                    <a href="#" class="btn red delete-btn hoverable" data-recipe-id="{{ recipe.id }}">Delete</a>
                 </p>
             </div>
         </li>
