footer applied again with css and font awesome

--- a/cookbook/static/css/style.css
+++ b/cookbook/static/css/style.css
@@ -28,3 +28,12 @@ main {
 nav .brand-logo {
   padding-left: 10px;
 }
+
+.col li {
+  display: flex;
+  align-items: center;
+}
+
+.col li i {
+  margin-right: 10px; /* Adjust as needed */
+}
