--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -58,7 +58,38 @@
       {% endblock %}
   </main>
 
-
+  <footer class="page-footer light-green darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Cookbook</h5>
+          <p class="grey-text text-lighten-4">A handy repository for your personal favourites</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Contact</h5>
+          <ul>
+              <li>
+                  <i class="fas fa-map-marker-alt"></i>
+                  <span>123 Main Street, Anytown, CA 12345</span>
+              </li>
+              <li>
+                  <i class="fas fa-phone"></i>
+                  <span>(123) 456-7890</span>
+              </li>
+              <li>
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:info@example.com" style="color: white;">info@example.com</a>
+            </li>                     
+          </ul>
+      </div>      
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      © 2024 KieranCG
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
